# unifr-master-ilids-prompt-engineering-playground

./: .gitignore  Makefile  README.md  _ipynb_preamble.py  change_renderer.py  main.py  mkdocs.yml  netlify.toml  pyproject.toml  similarity_ratio_const_denom.ipynb  similarity_ratio_minus_human_features.ipynb  similarity_ratio_minus_human_similarity.ipynb  timeit.py
all-images/: Makefile
docs/: index.md
docs/stylesheets/: extra.css
overrides/: main.html
src/prompt_playground/: __init__.py  actionclip.py  actionclip_similarities.py  ilids.py  monitoring.py  precache_registry.py  roc.py  tensor_utils.py  tsne.py
