[tool.poetry]
name = "prompt-playground"
version = "0.1.0"
description = ""
authors = ["Alain Schaller <schallerala@gmail.com>"]
readme = "README.md"
packages = [{include = "prompt_playground"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.85.0"
torch = "^1.12.1"
numpy = "^1.23.3"
pandas = "^1.5.0"
decord = {path = "../ilids/build/decord/python"}
Pillow = "^9.2.0"
scipy = "^1.9.2"
scikit-learn = "^1.1.2"
ilids = {path = "../ilids"}


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.18.3"
black = {extras = ["jupyter"], version = "^22.10.0"}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
